# maintenance-inventory-tracker-3

./: .gitignore  .nvmrc  Start MIT3 Website.cmd  Stop MIT3 Website.cmd  Update MIT3 Website.cmd  package-lock.json
backend/: README.md  package-lock.json  package.json
backend/backups/: README.txt
backend/data/: maintenance_inventory_3_web.db-shm  maintenance_inventory_3_web.db-wal
backend/scripts/: add_test_item.mjs  check-node-version.mjs  restart-backend-4173.ps1
backend/src/: auth.ts  backups.ts  db.ts  schema.ts  server.ts
database/migrations/: 001_initial_schema.sql  002_vendor_contact_email.sql  004_stock_ledger_mirror_fields.sql  006_deleted_records_mirror_fields.sql  008_inventory_non_stocked.sql
database/seed/: README.md
docs/: DATABASE_PLAN.md  DATA_LAYER_PLAN.md  RELEASE_CHECKLIST_3.0.md  RELEASE_NOTES_3.0.md  WEBSITE_MODE.md  WEBSITE_PLAN.md  jbt-new-style-1.md
frontend/: .env.production.website  .env.website.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/scripts/: build-release.ps1  bump-version.mjs  (+2 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  desktop.json
frontend/src-tauri/migrations/: 001_initial_schema.sql  003_inventory_live_fields.sql  005_requisition_mirror_fields.sql  007_inventory_watchlist_visibility.sql  009_requisition_cancellation_fields.sql  README.md
frontend/src-tauri/src/: main.rs
scripts/: start-mit3-website.ps1  stop-mit3-website.ps1  update-mit3-website.ps1
(+35 files in other folders)
