[package]
name = "maintenance-inventory-tracker"
version = "3.0.0-rc.1"
description = "Maintenance Inventory Tracker 3.0"
authors = ["Maintenance Inventory Tracker 3.0"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
regex = "1"
tempfile = "3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-sql = { version = "2.4.0", default-features = false, features = ["sqlite"] }
